Icon resizing + cosmetics

--- a/app/src/main/res/drawable/home_icon3.xml
+++ b/app/src/main/res/drawable/home_icon3.xml
@@ -1,5 +1,5 @@
-<vector android:height="75dp" android:viewportHeight="396"
-    android:viewportWidth="396" android:width="75dp" xmlns:android="http://schemas.android.com/apk/res/android">
+<vector android:height="@dimen/home_icon_size" android:viewportHeight="396"
+    android:viewportWidth="396" android:width="@dimen/home_icon_size" xmlns:android="http://schemas.android.com/apk/res/android">
     <path android:fillColor="#C7E5C8" android:pathData="M395.23,198.49C395.23,237.56 383.65,275.74 361.94,308.23C340.24,340.71 309.39,366.02 273.3,380.97C237.2,395.92 197.49,399.83 159.17,392.2C120.86,384.57 85.67,365.76 58.05,338.13C30.43,310.5 11.62,275.3 4.01,236.99C-3.61,198.67 0.31,158.96 15.27,122.87C30.23,86.78 55.55,55.94 88.04,34.24C120.53,12.55 158.72,0.97 197.78,0.98C250.16,1 300.38,21.82 337.4,58.85C374.43,95.89 395.23,146.12 395.23,198.49Z"/>
     <group>
         <clip-path android:pathData="M395.23,198.49C395.23,237.56 383.65,275.74 361.94,308.23C340.24,340.71 309.39,366.02 273.3,380.97C237.2,395.92 197.49,399.82 159.17,392.2C120.86,384.57 85.67,365.76 58.05,338.13C30.43,310.5 11.62,275.3 4.01,236.99C-3.61,198.67 0.31,158.96 15.27,122.87C30.23,86.78 55.55,55.94 88.04,34.24C120.53,12.55 158.72,0.97 197.78,0.98C250.16,1 300.38,21.81 337.4,58.85C374.43,95.89 395.23,146.12 395.23,198.49Z"/>
