--- a/app/src/main/res/drawable/user_icon2.xml
+++ b/app/src/main/res/drawable/user_icon2.xml
@@ -1,5 +1,5 @@
-<vector android:height="50dp" android:viewportHeight="396"
-    android:viewportWidth="396" android:width="50dp" xmlns:android="http://schemas.android.com/apk/res/android">
+<vector android:height="@dimen/user_icon_size" android:viewportHeight="396"
+    android:viewportWidth="396" android:width="@dimen/user_icon_size" xmlns:android="http://schemas.android.com/apk/res/android">
     <path android:fillColor="#C7E5C8" android:pathData="M395.16,198.21C395.15,237.21 383.57,275.33 361.9,307.74C340.23,340.16 309.43,365.42 273.4,380.34C237.37,395.25 197.73,399.15 159.48,391.53C121.24,383.92 86.11,365.14 58.54,337.56C30.98,309.98 12.2,274.85 4.6,236.6C-3,198.36 0.9,158.71 15.83,122.69C30.75,86.66 56.03,55.87 88.45,34.21C120.87,12.55 158.99,0.99 197.99,0.99C250.29,1 300.44,21.79 337.41,58.77C374.39,95.76 395.16,145.92 395.16,198.21Z"/>
     <group>
         <clip-path android:pathData="M395.16,198.21C395.15,237.21 383.57,275.32 361.9,307.74C340.23,340.16 309.43,365.42 273.4,380.34C237.37,395.25 197.73,399.15 159.48,391.53C121.24,383.92 86.11,365.14 58.54,337.56C30.98,309.98 12.2,274.85 4.6,236.6C-3,198.35 0.9,158.71 15.83,122.69C30.75,86.66 56.03,55.87 88.45,34.21C120.87,12.55 158.99,0.98 197.99,0.98C250.29,1 300.44,21.79 337.41,58.77C374.39,95.76 395.16,145.92 395.16,198.21Z"/>
