--- a/app/src/main/res/drawable/user_icon5.xml
+++ b/app/src/main/res/drawable/user_icon5.xml
@@ -1,5 +1,5 @@
-<vector android:height="50dp" android:viewportHeight="396"
-    android:viewportWidth="396" android:width="50dp" xmlns:android="http://schemas.android.com/apk/res/android">
+<vector android:height="@dimen/user_icon_size" android:viewportHeight="396"
+    android:viewportWidth="396" android:width="@dimen/user_icon_size" xmlns:android="http://schemas.android.com/apk/res/android">
     <path android:fillColor="#C7E5C8" android:pathData="M395.58,197.51C395.58,236.57 384,274.76 362.3,307.24C340.59,339.72 309.74,365.04 273.65,379.99C237.55,394.93 197.84,398.84 159.52,391.22C121.21,383.59 86.02,364.77 58.4,337.15C30.78,309.52 11.97,274.32 4.36,236C-3.26,197.69 0.66,157.97 15.62,121.88C30.58,85.8 55.9,54.95 88.39,33.26C120.88,11.56 159.07,-0.01 198.14,0C250.51,0.02 300.73,20.83 337.76,57.87C374.79,94.91 395.58,145.13 395.58,197.51Z"/>
     <group>
         <clip-path android:pathData="M395.58,197.51C395.58,236.57 384,274.76 362.3,307.24C340.59,339.73 309.74,365.04 273.65,379.99C237.55,394.93 197.84,398.84 159.52,391.22C121.21,383.59 86.02,364.77 58.4,337.15C30.78,309.52 11.97,274.32 4.36,236.01C-3.26,197.69 0.66,157.98 15.62,121.89C30.58,85.8 55.9,54.96 88.39,33.26C120.88,11.56 159.07,-0.01 198.14,0C250.51,0.02 300.73,20.83 337.76,57.87C374.79,94.91 395.58,145.14 395.58,197.51Z"/>
