--- a/app/src/main/res/drawable/home_icon4.xml
+++ b/app/src/main/res/drawable/home_icon4.xml
@@ -1,5 +1,5 @@
-<vector android:height="75dp" android:viewportHeight="396"
-    android:viewportWidth="396" android:width="75dp" xmlns:android="http://schemas.android.com/apk/res/android">
+<vector android:height="@dimen/home_icon_size" android:viewportHeight="396"
+    android:viewportWidth="396" android:width="@dimen/home_icon_size" xmlns:android="http://schemas.android.com/apk/res/android">
     <path android:fillColor="#C7E5C8" android:pathData="M395.95,198.49C395.95,237.56 384.36,275.74 362.65,308.23C340.95,340.71 310.1,366.02 274.01,380.97C237.91,395.92 198.2,399.82 159.88,392.2C121.57,384.57 86.38,365.76 58.76,338.13C31.14,310.5 12.33,275.3 4.72,236.99C-2.9,198.67 1.02,158.96 15.98,122.87C30.94,86.78 56.26,55.94 88.75,34.24C121.24,12.55 159.43,0.97 198.5,0.98C250.87,1 301.09,21.81 338.12,58.85C375.14,95.89 395.95,146.12 395.95,198.49Z"/>
     <group>
         <clip-path android:pathData="M395.95,198.49C395.95,237.55 384.36,275.74 362.65,308.22C340.95,340.71 310.1,366.02 274.01,380.97C237.91,395.92 198.2,399.82 159.88,392.2C121.57,384.57 86.38,365.76 58.76,338.13C31.14,310.5 12.33,275.3 4.72,236.99C-2.9,198.67 1.02,158.96 15.98,122.87C30.94,86.78 56.26,55.94 88.75,34.24C121.24,12.54 159.43,0.97 198.5,0.98C250.87,1 301.09,21.81 338.12,58.85C375.14,95.89 395.95,146.12 395.95,198.49Z"/>
