--- a/app/src/main/res/drawable/user_icon6.xml
+++ b/app/src/main/res/drawable/user_icon6.xml
@@ -1,6 +1,6 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="50dp"
-    android:height="50dp"
+    android:width="@dimen/user_icon_size"
+    android:height="@dimen/user_icon_size"
     android:viewportWidth="396"
     android:viewportHeight="396">
   <path
