--- a/app/src/main/res/layout/dialog_user_detail.xml
+++ b/app/src/main/res/layout/dialog_user_detail.xml
@@ -25,13 +25,11 @@
 
     <ImageView
         android:id="@+id/userIcon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/baseline_account_circle_24"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        app:srcCompat="@drawable/user_icon1"
         android:layout_margin="@dimen/medium_text_size"
         android:padding="5dp"
-        android:scaleX="2"
-        android:scaleY="2"
         android:background="@drawable/dialog_background"
         android:backgroundTint="?attr/colorPrimary"
         android:backgroundTintMode="multiply"
@@ -69,6 +67,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/userIconHint"
         app:layout_constraintBottom_toTopOf="@id/logoutButton"
+        android:gravity="center_horizontal"
+        android:textStyle="bold"
         app:counterEnabled="true"
         app:counterMaxLength="15"
         >
@@ -77,7 +77,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textCapSentences"
+            android:gravity="center_horizontal"
             android:background="?attr/colorPrimary"
+            android:textStyle="bold"
             android:textColor="?attr/colorOnPrimary"
             android:hint="@string/user_name_hint" />
     </com.google.android.material.textfield.TextInputLayout>
