--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -76,14 +76,13 @@
 
             <ImageView
                 android:id="@+id/menuTopLogo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:scaleY="0.6"
-                android:scaleX="0.6"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:src="@mipmap/chorey_logo_round"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="@dimen/line_space"
                 android:contentDescription="@string/chorey_logo" />
 
             <TextView
@@ -93,7 +92,6 @@
                 app:layout_constraintStart_toEndOf="@id/menuTopLogo"
                 app:layout_constraintTop_toTopOf="@id/menuTopLogo"
                 app:layout_constraintBottom_toBottomOf="@id/menuTopLogo"
-                android:layout_marginStart="-10dp"
                 android:textStyle="bold"
                 android:textColor="?attr/colorOnPrimary"
                 android:textSize="@dimen/medium_text_size"
@@ -115,8 +113,8 @@
 
                 <ImageButton
                     android:id="@+id/menuSettingsButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="@dimen/header_icon_size"
+                    android:layout_height="@dimen/header_icon_size"
                     android:contentDescription="@string/add_members_button"
                     android:background="@android:color/transparent"
                     android:src="@drawable/baseline_person_24" />
@@ -198,8 +196,8 @@
             android:id="@+id/addHomeButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="30dp"
-            android:layout_marginBottom="55dp"
+            android:layout_marginEnd="25dp"
+            android:layout_marginBottom="25dp"
             android:contentDescription="@string/add_icon_description"
             app:icon="@drawable/baseline_add_home_24"
             android:text="@string/add_home_button"
