--- a/app/src/main/res/layout/dialog_home_detail.xml
+++ b/app/src/main/res/layout/dialog_home_detail.xml
@@ -76,7 +76,7 @@
 
     <TextView
         android:id="@+id/homeDetailMembers"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textColor="?attr/colorOnPrimary"
         android:layout_marginStart="10dp"
@@ -85,6 +85,7 @@
         app:layout_constraintStart_toEndOf="@id/homeDetailMembersText"
         app:layout_constraintTop_toTopOf="@id/homeDetailMembersText"
         app:layout_constraintBottom_toBottomOf="@id/homeDetailMembersText"
+        app:layout_constraintEnd_toEndOf="parent"
         android:text="@string/user_name_placeholder" />
 
     <ImageButton
